test/TestPhases/typechecker/invalid/noUintHoldNegValue.blc
module

activity start ()()

    var z: nat64 = -255

    await true
end
